--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-MAILCHIMP_API_KEY="key"
-MAILCHIMP_LIST_ID="id"
+MAILCHIMP_API_KEY="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX-us14"
+MAILCHIMP_LIST_ID="XXXXXXXXXX"
 SLACK_WEBHOOK_URL="https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX"
