--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-MAILCHIMP_API_KEY="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX-us14"
-MAILCHIMP_LIST_ID="XXXXXXXXXX"
+REVUC_API_KEY="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX-us14"
 SLACK_WEBHOOK_URL="https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX"
